fix wrong fonts

--- a/style/know-more.css
+++ b/style/know-more.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: mainFont;
-  src: url(../assets/fonts/Avenir\ Font/AvenirLTStd-book.otf);
+  src: url(https://res.cloudinary.com/dbgzjhgbs/raw/upload/v1624691254/lyte-fonts/Avenir%20Font/AvenirLTStd-Book_hfryk4.otf);
 }
 @font-face {
   font-family: mainFontBold;
-  src: url(../assets/fonts/Avenir\ Font/AvenirLTStd-black.otf);
+  src: url(https://res.cloudinary.com/dbgzjhgbs/raw/upload/v1624691254/lyte-fonts/Avenir%20Font/AvenirLTStd-Black_ypgivv.otf);
 }
 html,
 body {
