--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,11 @@
 @font-face {
   font-family: mainFont;
-  src: url(../assets/fonts/Avenir\ Font/AvenirLTStd-book.otf);
+  src: url(https://res.cloudinary.com/dbgzjhgbs/raw/upload/v1624691254/lyte-fonts/Avenir%20Font/AvenirLTStd-Book_hfryk4.otf);
 }
 @font-face {
   font-family: mainFontBold;
-  src: url(../assets/fonts/Avenir\ Font/AvenirLTStd-black.otf);
+  src: url(https://res.cloudinary.com/dbgzjhgbs/raw/upload/v1624691254/lyte-fonts/Avenir%20Font/AvenirLTStd-Black_ypgivv.otf);
 }
-html,
 body {
   height: 100%;
 }
